k8s/01-infrastructure/eureka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-peer1
  namespace: waybill
  labels:
    app: eureka-peer1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-peer1
  template:
    metadata:
      labels:
        app: eureka-peer1
    spec:
      containers:
      - name: eureka
        image: khanhnv26/service-registry:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8761
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
    name: eureka-peer1
    namespace: waybill
spec:
    type: ClusterIP
    selector:
        app: eureka-peer1
    ports:
        - port: 8761
          targetPort: 8761
