k8s/01-infrastructure/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: waybill
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:alpine
        ports:
        - name: redis
          containerPort: 6379
        readinessProbe:
          tcpSocket:
            port: redis
          periodSeconds: 10
          failureThreshold: 6
        resources:
            requests:
                memory: "64Mi"
                cpu: "50m"
            limits:
                memory: "256Mi"
                cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: waybill
spec:
    type: LoadBalancer
    selector:
        app: redis
    ports:
      - port: 6379
        targetPort: 6379
